# anaglyth-CG

./: Anaglyth  CMakeLists.txt  README.md  main.cpp
Classes/: Model.cpp
util/: declaration.h  settings.h
